--- a/1/EomTool/EomToolWeb/Views/Payouts/Details.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Payouts/Details.cshtml
@@ -1,8 +1,2 @@
-﻿@model PayoutsListViewModel
-@Styles.Render("~/PubRep/css")
-<br />
-@Html.Partial("PayoutsGrid", Model)
-<br />
-<div style="border: 0px solid black">
-    @Model.PublisherReport
-</div>
+﻿@Html.Partial("PayoutsGrid")
+
