extra info on batchNote

--- a/1/EomTool/EomToolWeb/Views/Batches/ShowNotes.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Batches/ShowNotes.cshtml
@@ -2,10 +2,10 @@
 
 @foreach (var note in Model) {
 <p>
-    Batch: @note.batch_id<br />
-    @note.date_created<br />
-    @note.author<br />
-    ACTION: @(note.MediaBuyerApprovalStatus != null ? note.MediaBuyerApprovalStatus.name : "")<br />
+    <b>Date:</b> @note.date_created<br />
+    <b>By:</b> @note.author<br />
+    @if (!String.IsNullOrWhiteSpace(note.extra)) { <b>For:</b> @note.extra<br /> }
+    <b>Action:</b> @(note.MediaBuyerApprovalStatus != null ? note.MediaBuyerApprovalStatus.name : "")<br />
     @Html.Raw(note.note.Replace("\n","<br />"))
 </p>
 }
