--- a/1/EomTool/EomToolWeb/Views/Payouts/SummaryGrid.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Payouts/SummaryGrid.cshtml
@@ -28,7 +28,7 @@
             </td>
             <td>@if (!String.IsNullOrWhiteSpace(@ps.BatchIds))
                 {
-                    <a href="#" onclick="ShowNotes(@ps.BatchIds); return false;">Notes</a>
+                    <a href="#" onclick="ShowNotes('@ps.BatchIds'); return false;">Notes</a>
                 }
             </td>
             @if (Model.ShowActions)
