--- a/1/EomTool/EomToolWeb/Content/Site.css
+++ b/1/EomTool/EomToolWeb/Content/Site.css
@@ -1,14 +1,14 @@
 ﻿html
 {
-    background-color: #e2e2e2;
+    /*background-color: #e2e2e2;*/
     margin: 0;
     padding: 0;
 }
 
 body
 {
-    background-color: #fff;
-    border-top: solid 10px #000;
+    /*background-color: #fff;*/
+    /*border-top: solid 10px #000;*/
     color: #333;
     font-size: .85em;
     font-family: "Segoe UI" , Verdana, Helvetica, Sans-Serif;
@@ -910,7 +910,5 @@ tr.highlighted
 }
 .resizing-helper
 {
-    border-style: none;
-    border-bottom: 1px dashed Red;
-    border-right: 1px dashed Red;
+    border: 2px dashed Red;
 }
