--- a/1/EomTool/EomToolWeb/Views/Shared/_Layout.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Shared/_Layout.cshtml
@@ -9,9 +9,10 @@
     @Styles.Render("~/Content/themes/base/css")
     @Styles.Render("~/Content/SlickGrid/css")
     @Scripts.Render("~/bundles/modernizr")
+    @Styles.Render("~/Content/PubRep.css")
 </head>
 <body>
-    <header>
+@*    <header>
         <div class="content-wrapper">
             <div class="float-left">
                 <section id="login">
@@ -22,18 +23,19 @@
     </header>
     <div id="body">
         @RenderSection("featured", required: false)
-        <section class="content-wrapper main-content clear-fix">
+        <section class="content-wrapper main-content clear-fix">*@
             @RenderBody()
+@*  
         </section>
     </div>
-    <footer>
+  <footer>
         <div class="content-wrapper">
             <div class="float-left">
                 <p>
                     &copy; @DateTime.Now.Year - Direct Agents</p>
             </div>
         </div>
-    </footer>
+    </footer>*@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jqueryui")
     @Scripts.Render("~/Scripts/jquery.unobtrusive-ajax.js")
