fix layout of publisher summary grid

--- a/1/EomTool/EomToolWeb/Views/Payouts/Summary.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Payouts/Summary.cshtml
@@ -5,17 +5,17 @@
 <style type="text/css">
     #summaryOuter
     {
-        /*border: 2px dashed Blue;*/
         position: absolute;
         height: 100%;
         width: 100%;
     }
     #summaryGridContainer
     {
-        /*border: 1px solid Red;*/
         position: absolute;
         left: 0;
         width: 50%;
+        height: 50%;        
+        overflow: auto;        
     }
     #publisherReportContainer
     {
@@ -33,7 +33,7 @@
         position: absolute;
         bottom: 0;
         height: 50%;
-        width: 100%;
+        width: 100%;     
     }
 </style>
 <div id="summaryOuter">
